fixes table overflowing issues

--- a/src/assets/css/blocks/about.css
+++ b/src/assets/css/blocks/about.css
@@ -2,3 +2,7 @@
     list-style-type: none;
     padding: 0;
 }
+
+.table-container {
+    overflow-x: auto;
+}
