--- a/src/assets/css/compositions/cover.css
+++ b/src/assets/css/compositions/cover.css
@@ -14,4 +14,5 @@
 
 .cover > main {
     margin-block: auto;
+    inline-size: 100%;
 }
